--- a/blocks/page.css
+++ b/blocks/page.css
@@ -4,6 +4,5 @@
   align-items: center;
   font-size: 18px;
   min-height: 100vh;
-  color: white;
   margin: 0 auto;
 }
