--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -54,6 +54,7 @@
   font-size: 12px;
   font-weight: 400;
   line-height: 15px;
+  color: white;
 }
 
 .popup__button-close {
@@ -131,7 +132,7 @@
   border: 1px solid rgba(0, 0, 0, 1);
 }
 
-@media screen and (max-width: 768px) and (min-width: 320px) {
+@media screen and  (max-width: 320px) {
   .popup__content {
     width: 288px;
     height: 322px;
